fix list spacing

--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,10 @@ h1 {
   margin-top: 30px;
 }
 
+#git_3 .container ol {
+  text-align: left;
+}
+
 #git_4 {
   background-color: green;
 }
